Refactor package name, changed firebase to my google account

--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion '25.0.2'
     defaultConfig {
-        applicationId "com.antonborries.taschendiebstahl"
+        applicationId "de.hhu.cs.feedbackr"
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 3
