--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.4.2'
     compile 'com.google.firebase:firebase-crash:11.4.2'
 
+    compile 'com.firebase:geofire-android:2.1.3'
+
     compile 'com.google.android.gms:play-services:11.4.2'
     compile 'com.google.android.gms:play-services-maps:11.4.2'
 
