--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -21,11 +21,11 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
-    compileSdkVersion 25
+    compileSdkVersion 27
     defaultConfig {
         applicationId "de.hhu.cs.feedbackr"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 4
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
@@ -42,25 +42,39 @@ android {
     dataBinding {
         enabled = true
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:mediarouter-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.firebase:firebase-core:11.4.2'
-    compile 'com.google.firebase:firebase-database:11.4.2'
-    compile 'com.google.firebase:firebase-auth:11.4.2'
-    compile 'com.google.firebase:firebase-crash:11.4.2'
-    compile 'com.firebase:geofire-android:2.1.3'
-    compile 'com.google.android.gms:play-services:11.4.2'
-    compile 'com.google.android.gms:play-services-maps:11.4.2'
-    testCompile 'junit:junit:4.12'
+
+    def support_version = "27.1.1"
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:mediarouter-v7:$support_version"
+    implementation "com.android.support:design:$support_version"
+    implementation "com.android.support:cardview-v7:$support_version"
+
+    implementation "com.android.support.constraint:constraint-layout:1.1.2"
+
+    def firebase_version = "11.4.2"
+    implementation "com.google.firebase:firebase-core:$firebase_version"
+    implementation "com.google.firebase:firebase-database:$firebase_version"
+    implementation "com.google.firebase:firebase-auth:$firebase_version"
+    implementation "com.google.firebase:firebase-crash:$firebase_version"
+    implementation "com.google.firebase:firebase-storage:$firebase_version"
+
+    implementation "com.firebase:geofire-android:2.1.3"
+
+    def gms_version = "11.4.2"
+    implementation "com.google.android.gms:play-services:$gms_version"
+    implementation "com.google.android.gms:play-services-maps:$gms_version"
+
+    testImplementation 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
