--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -5,13 +5,15 @@ buildscript {
         jcenter()
         maven {
             url 'https://maven.google.com/'
-            name 'Google'
         }
-        google()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
-        classpath 'com.google.gms:google-services:3.1.2'
+        classpath 'com.google.gms:google-services:4.1.0'
+        classpath 'io.fabric.tools:gradle:1.25.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,11 +24,7 @@ allprojects {
     repositories {
         jcenter()
         maven {
-            url "https://maven.google.com"
-        }
-        maven {
             url 'https://maven.google.com/'
-            name 'Google'
         }
     }
 }
