--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -24,7 +24,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "de.hhu.cs.feedbackr"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 28
         versionCode 5
         versionName "1.0"
@@ -46,7 +46,7 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
         sourceCompatibility JavaVersion.VERSION_1_8
     }
-    buildToolsVersion '28.0.2'
+    buildToolsVersion '28.0.3'
 }
 
 dependencies {
@@ -54,11 +54,10 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    def support_version = "27.1.1"
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation "com.android.support:mediarouter-v7:$support_version"
-    implementation "com.android.support:design:$support_version"
-    implementation "com.android.support:cardview-v7:$support_version"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.android.support:mediarouter-v7:27.1.1"
+    implementation "com.android.support:design:27.1.1"
+    implementation "com.android.support:cardview-v7:27.1.1"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.firebase:firebase-core:16.0.3'
     implementation 'com.google.firebase:firebase-database:16.0.2'
